# jxs_vfw_try2

./: .gitignore  CMakeLists.txt
scripts/: main.py
src/: test.cpp  vfw_wrapper.cpp  vfw_wrapper.h
